src/test/deca/syntax/invalid/provided/tester_tout_lexer.deca
// Description:
//    Programme pour verifier tout les elements a implementer dans lexer.
//

//
// Historique:
//    cree le 05/01/2023

{
asm
instanceof
println
true
class
new
printlnx
while
extends
null
printx
else
readInt
protected
false
readFloat
return
if
print
this
'a'
9
$9
<
>=
+
!
;
==
!=
-
*
>=
/
%
.
<=
&&
||
53
,
(
)
{
}
+
-
e9
4.6
4.6F
A
0x9
"tester"
#include"tester.txt"

